Layouts, styling and ja

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,328 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<!DOCTYPE html>
+<html>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<head>
+    <meta charset="utf-8">
+    <title>Medic | Medical HTML Template</title>
+
+
+    <!-- mobile responsive meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <!-- Slick Carousel -->
+    <link rel="stylesheet" href="~/plugins/slick/slick.css">
+    <link rel="stylesheet" href="~/plugins/slick/slick-theme.css">
+    <!-- FancyBox -->
+    <link rel="stylesheet" href="~/plugins/fancybox/jquery.fancybox.min.css">
+
+    <!-- Stylesheets -->
+    <link href="~/css/style.css" rel="stylesheet">
+
+    <!--Favicon-->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+</head>
+
+
+<body>
+    <div class="page-wrapper">
+        <!-- Preloader -->
+        <!-- <div class="preloader"></div> -->
+        <!-- Preloader -->
+        <!--header top-->
+        <div class="header-top">
+            <div class="container clearfix">
+                <div class="top-left">
+                    <h6>Opening Hours : 24/7</h6>
+                </div>
+               @*  <div class="top-right">
+                    <ul class="social-links">
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-google-plus" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div> *@
+            </div>
+        </div>
+        <!--header top-->
+        <!--Header Upper-->
+        <section class="header-uper">
+            <div class="container clearfix">
+                <div class="logo">
+                    <figure>
+                        <a href="index.html">
+                            <img src="~/images/logo.png" alt="" width="130">
+                        </a>
+                    </figure>
+                </div>
+                <div class="right-side">
+                    <ul class="contact-info">
+                        <li class="item">
+                            <div class="icon-box">
+                                <i class="fa fa-envelope-o"></i>
+                            </div>
+                            <strong>Email</strong>
+                            <br>
+                            <a href="#">
+                                <span>info@medic.com</span>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <div class="icon-box">
+                                <i class="fa fa-phone"></i>
+                            </div>
+                            <strong>Call Now</strong>
+                            <br>
+                            <span>+ (88017) - 123 - 4567</span>
+                        </li>
+                    </ul>
+                    <div class="link-btn">
+                        <a href="#" class="btn-style-one">Appoinment</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Header Upper-->
+        
+        <!--=================================
+        =            Page Slider            =
+        ==================================-->
+        <div class="hero-slider">
+            <!-- Slider Item -->
+            <div class="slider-item slide1" style="background-image:url(images/slider-bg-1.jpg)">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <!-- Slide Content Start -->
+                            <div class="content style text-center">
+                                <h2 class="text-white text-bold mb-2">Our Best Surgeons</h2>
+                                <p class="tag-text mb-5">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel sunt animi sequi ratione quod at earum. <br>
+                                    Quis quos officiis numquam!
+                                </p>
+                                <a href="#" class="btn btn-main btn-white">explore</a>
+                            </div>
+                            <!-- Slide Content End -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--====  End of Page Slider  ====-->
+
+        <section class="cta">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="cta-block">
+                            <div class="emmergency item">
+                                <i class="fa fa-phone"></i>
+                                <h2>Emegency Cases</h2>
+                                <a href="#">1-800-700-6200</a>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="top-doctor item">
+                                <i class="fa fa-stethoscope"></i>
+                                <h2>24 Hour Service</h2>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore dignissimos officia dicta suscipit vel eum</p>
+                                <a href="#" class="btn btn-main">Read more</a>
+                            </div>
+                            <div class="working-time item">
+                                <i class="fa fa-hourglass-o"></i>
+                                <h2>Working Hours</h2>
+                                <ul class="w-hours">
+                                    <li>Mon - Fri  - <span>8:00 - 17:00</span></li>
+                                    <li>Mon - Fri  - <span>8:00 - 17:00</span></li>
+                                    <li>Mon - Fri  - <span>8:00 - 17:00</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section class="appoinment-section section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <div class="accordion-section">
+                            <div class="section-title">
+                                <h3>FAQ</h3>
+                            </div>
+                            <div class="accordion-holder">
+                                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading" role="tab" id="headingOne">
+                                            <h4 class="panel-title">
+                                                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                    Why Should I choose Medical Health
+                                                </a>
+                                            </h4>
+                                        </div>
+                                        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                                            <div class="panel-body">
+                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                                                non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                                sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
+                                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                                vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+                                                heard of them accusamus labore sustainable VHS.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading" role="tab" id="headingTwo">
+                                            <h4 class="panel-title">
+                                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false"
+                                                   aria-controls="collapseTwo">
+                                                    What are the Centre’s visiting hours?
+                                                </a>
+                                            </h4>
+                                        </div>
+                                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                            <div class="panel-body">
+                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                                                non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                                sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
+                                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                                vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+                                                heard of them accusamus labore sustainable VHS.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading" role="tab" id="headingThree">
+                                            <h4 class="panel-title">
+                                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false"
+                                                   aria-controls="collapseThree">
+                                                    How many visitors are allowed?
+                                                </a>
+                                            </h4>
+                                        </div>
+                                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                                            <div class="panel-body">
+                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                                                non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                                sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
+                                                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                                vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+                                                heard of them accusamus labore sustainable VHS.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <div class="contact-area">
+                            <div class="section-title">
+                                <h3>
+                                    Request
+                                    <span>Appointment</span>
+                                </h3>
+                            </div>
+                            <form name="contact_form" class="default-form contact-form" action="sendmail.php" method="post">
+                                <div class="row">
+                                    <div class="col-md-6 col-sm-12 col-xs-12">
+                                        <div class="form-group">
+                                            <input type="text" name="Name" placeholder="Name" required="">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="email" name="Email" placeholder="Email" required="">
+                                        </div>
+                                        <div class="form-group">
+                                            <select name="subject">
+                                                <option>Departments</option>
+                                                <option>Diagnostic</option>
+                                                <option>Psychological</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-sm-12 col-xs-12">
+                                        <div class="form-group">
+                                            <input type="text" name="Phone" placeholder="Phone" required="">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" name="Date" placeholder="Date" required="" id="datepicker">
+                                            <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        </div>
+                                        <div class="form-group">
+                                            <select name="subject">
+                                                <option>Doctor</option>
+                                                <option>Diagnostic</option>
+                                                <option>Psychological</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12 col-sm-12 col-xs-12">
+                                        <div class="form-group">
+                                            <textarea name="form_message" placeholder="Your Message" required=""></textarea>
+                                        </div>
+                                        <div class="form-group text-center">
+                                            <button type="submit" class="btn-style-one">submit now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Contact Section -->
+
+
+    </div>
+    <!--End pagewrapper-->
+    <!--Scroll to top-->
+    <div class="scroll-to-top scroll-to-target" data-target=".header-top">
+        <span class="icon fa fa-angle-up"></span>
+    </div>
+
+    <script src="~/plugins/jquery.js"></script>
+    <script src="~/plugins/bootstrap.min.js"></script>
+    <script src="~/plugins/bootstrap-select.min.js"></script>
+    <!-- Slick Slider -->
+    <script src="~/plugins/slick/slick.min.js"></script>
+    <!-- FancyBox -->
+    <script src="~/plugins/fancybox/jquery.fancybox.min.js"></script>
+    <!-- Google Map -->
+    <script src="~/plugins/google-map/gmap.js"></script>
+
+    <script src="~/plugins/validate.js"></script>
+    <script src="~/plugins/wow.js"></script>
+    <script src="~/plugins/jquery-ui.js"></script>
+    <script src="~/plugins/timePicker.js"></script>
+    <script src="~/js/script.js"></script>
+</body>
+
+</html>
+
