--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -101,7 +101,8 @@
                         </li>
                     </ul>
                     <div class="link-btn">
-                        <a href="#" class="btn-style-one">Appoinment</a>
+                        <a class="btn-style-one" asp-area="" asp-controller="LoginRegistration" asp-action="ER_Registration">ER Registration</a>
+                       @*  <a href="#" class="btn-style-one">Appoinment</a> *@
                     </div>
                 </div>
             </div>
