Removal of unsed files

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,14 +13,11 @@
     <!-- Slick Carousel -->
     <link rel="stylesheet" href="~/plugins/slick/slick.css">
     <link rel="stylesheet" href="~/plugins/slick/slick-theme.css">
-    <!-- FancyBox -->
-    <link rel="stylesheet" href="~/plugins/fancybox/jquery.fancybox.min.css">
-
     <!-- Stylesheets -->
     <link href="~/css/style.css" rel="stylesheet">
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 </head>
@@ -28,11 +25,6 @@
 
 <body>
     <div class="page-wrapper">
-        <!-- Preloader -->
-        <!-- <div class="preloader"></div> -->
-        <!-- Preloader -->
-        <!--header top-->
-   
         
         <!--=================================
         =            Page Slider            =
@@ -96,24 +88,15 @@
     </div>
     <!--End pagewrapper-->
     <!--Scroll to top-->
-    <div class="scroll-to-top scroll-to-target" data-target=".header-top">
+@*     <div class="scroll-to-top scroll-to-target" data-target=".header-top">
         <span class="icon fa fa-angle-up"></span>
     </div>
-
+ *@
     <script src="~/plugins/jquery.js"></script>
     <script src="~/plugins/bootstrap.min.js"></script>
     <script src="~/plugins/bootstrap-select.min.js"></script>
-    <!-- Slick Slider -->
-    <script src="~/plugins/slick/slick.min.js"></script>
-    <!-- FancyBox -->
-    <script src="~/plugins/fancybox/jquery.fancybox.min.js"></script>
-    <!-- Google Map -->
-    <script src="~/plugins/google-map/gmap.js"></script>
-
     <script src="~/plugins/validate.js"></script>
-    <script src="~/plugins/wow.js"></script>
-    <script src="~/plugins/jquery-ui.js"></script>
-    <script src="~/js/script.js"></script>
+
 </body>
 
 </html>
