--- a/Views/RegistrationLogin/ER_Registration.cshtml
+++ b/Views/RegistrationLogin/ER_Registration.cshtml
@@ -24,8 +24,7 @@
     <link href="~/css/style.css" rel="stylesheet">
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -76,43 +75,58 @@
                                 <span>Registration</span>
                             </h3>
                         </div>
-                        <form name="contact_form" class="default-form contact-form" action="sendmail.php" method="post"> <!--Update using controllers-->
+                    <form asp-action="ER_Registration" name="contact_form" class="default-form contact-form">
                             <div class="row">
                                 <div class="col-md-6 col-sm-12 col-xs-12">
                                     <div class="form-group">
-                                        <input type="text" name="Full Name" placeholder="Full Name" required="">
+                                    <input asp-for="FullNames" class="form-control" placeholder="Full Name" required="" />
+@*                                         <input type="text" name="Full Name" placeholder="Full Name" required=""> *@
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" name="ID Number" placeholder="ID Number" required="">
+                                    <input type="text" asp-for="ID" class="form-control" placeholder="ID Number" required="">
+                                    @*   <input type="text" name="ID Number" placeholder="ID Number" required=""> *@
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-12 col-xs-12">
                                    <div class="form-group">
-                                        <input type="text" name="Last Name" placeholder="Last Name" required="">
+                                    <input asp-for="LastName" class="form-control" placeholder="Last Name" required="" />
+                                   @*      <input type="text" name="Last Name" placeholder="Last Name" required=""> *@
                                    </div>
                                 <div class="form-group" hidden="hidden">
                                         <input type="text" name="Date" placeholder="Date" required="" id="datepicker">
                                         <i class="fa fa-calendar" aria-hidden="true"></i>
                                     </div>
                                 <div class="form-group">
-                                    <input type="tel" name="Phone Number" placeholder="Phone Number" required="">
+                                    <input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number" required="" />
+                                    @* <input type="tel" name="Phone Number" placeholder="Phone Number" required=""> *@
                                 </div>
                                 </div>
                                 <div class="col-md-12 col-sm-12 col-xs-12">
                                     <strong>Please select your emergency (or similar)</strong>
                                     <br>
                                     <div class="form-group">
-                                        <select name="subject" >
+                                    <select name="subject" asp-for="SelectedPriority">
+                                        @foreach (var item in Model.ProblemPriority)
+                                        {
+                                            <option value="@item.Key">@item.Value</option>
+                                        }
+                                    </select>
+                                   @*  <select name="subject" >
+                                        <!--Update using KeyValuePair-->
                                             <option>Injury</option>
                                             <option>Pains</option>
                                             <option>Foreign Object</option>
-                                        </select>
+                                        </select> *@
                                     </div>
                                     <div class="form-group">
-                                        <textarea name="form_message" placeholder="Problem Description (Opional)"></textarea>
+                                    <textarea name="form_message" input asp-for="Description" class="form-control" placeholder="Problem Description (Opional)">
+                                           </textarea>
+                                    @* <input asp-for="Description" class="form-control" placeholder="Problem Description (Opional)" /> *@
+                                 
+                                        @* <textarea name="form_message" placeholder="Problem Description (Opional)"></textarea> *@
                                     </div>
                                     <div class="form-group text-center">
-                                        <button type="submit" class="btn-style-one">submit</button>
+                                    <button type="submit" value="Save" class="btn-style-one">submit</button>
                                     </div>
                                 </div>
                             </div>
