--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -94,17 +94,10 @@
         <span class="icon fa fa-angle-up"></span>
     </div>
  *@
-    <script src="~/plugins/jquery.js"></script>
+    @*    <script src="~/plugins/jquery.js"></script> *@
     <script src="~/plugins/bootstrap.min.js"></script>
     <script src="~/plugins/bootstrap-select.min.js"></script>
-    <script src="~/plugins/validate.js"></script>    <!-- Slick Slider -->
-    <script src="~/plugins/slick/slick.min.js"></script>
-    <!-- FancyBox -->
-    <script src="~/plugins/fancybox/jquery.fancybox.min.js"></script>
-   
-    <script src="~/plugins/wow.js"></script>
-    <script src="~/plugins/jquery-ui.js"></script>
-    <script src="~/js/script.js"></script>
+    @*  <script src="~/plugins/validate.js"></script> *@
 
 </body>
 
