--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="~/plugins/slick/slick-theme.css">
     <!-- FancyBox -->
     <link rel="stylesheet" href="~/plugins/fancybox/jquery.fancybox.min.css">
+    <!-- Icons -->
+    <link rel="stylesheet" href="~/plugins/font-awesome-4.7.0/css/font-awesome">
+
     <!-- Stylesheets -->
     <link href="~/css/style.css" rel="stylesheet">
 
@@ -44,7 +47,7 @@
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel sunt animi sequi ratione quod at earum. <br>
                                     Quis quos officiis numquam!
                                 </p>
-                                <a href="#" class="btn btn-main btn-white">explore</a>
+                                <a href="#" class="btn btn-main btn-white">Dequeue</a>
                             </div>
                             <!-- Slide Content End -->
                         </div>
@@ -70,7 +73,7 @@
                                 <i class="fa fa-stethoscope"></i>
                                 <h2>24 Hour Service</h2>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore dignissimos officia dicta suscipit vel eum</p>
-                                <a href="#" class="btn btn-main">Read more</a>
+                
                             </div>
                             <div class="working-time item">
                                 <i class="fa fa-hourglass-o"></i>
@@ -89,16 +92,8 @@
 
     </div>
     <!--End pagewrapper-->
-    <!--Scroll to top-->
-@*     <div class="scroll-to-top scroll-to-target" data-target=".header-top">
-        <span class="icon fa fa-angle-up"></span>
-    </div>
- *@
-    @*    <script src="~/plugins/jquery.js"></script> *@
     <script src="~/plugins/bootstrap.min.js"></script>
     <script src="~/plugins/bootstrap-select.min.js"></script>
-    @*  <script src="~/plugins/validate.js"></script> *@
-
 </body>
 
 </html>
