--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,26 +27,24 @@
                 </figure>
             </div>
             <div class="right-side">
-                <ul class="contact-info">
-                    <li class="item">
-                        <div class="icon-box">
-                            <i class="fa fa-envelope-o"></i>
-                        </div>
-                        <strong>Email</strong>
-                        <br>
-                        <a href="#">
+                    <ul class="contact-info">
+                        <li class="item">
+                            <div class="icon-box">
+                                <i class="fa fa-envelope-o"></i>
+                            </div>
+                            <strong>Email</strong>
+                            <br>
                             <span>info@medic.com</span>cc
-                        </a>
-                    </li>
-                    <li class="item">
-                        <div class="icon-box">
-                            <i class="fa fa-phone"></i>
-                        </div>
-                        <strong>Call Now</strong>
-                        <br>
-                        <span>+ (88017) - 123 - 4567</span>
-                    </li>
-                </ul>
+                        </li>
+                        <li class="item">
+                            <div class="icon-box">
+                                <i class="fa fa-phone"></i>
+                            </div>
+                            <strong>Call Now</strong>
+                            <br>
+                            <span>+(27) - 112</span>
+                        </li>
+                    </ul>
                 <div class="link-btn">
                     <a class="btn-style-one" asp-area="" asp-controller="RegistrationLogin" asp-action="ER_Registration">ER Registration</a>
                     @*  <a href="#" class="btn-style-one">Appoinment</a> *@
